Package_Tools/include-C/tcl8.6/tclDecls.h


extern void		Tcl_QueryTimeProc(Tcl_GetTimeProc **getProc,
				Tcl_ScaleTimeProc **scaleProc,
				ClientData *clientData);
extern Tcl_DriverThreadActionProc * Tcl_ChannelThreadActionProc(
				const Tcl_ChannelType *chanTypePtr);
extern Tcl_Obj *	Tcl_NewBignumObj(mp_int *value);
extern Tcl_Obj *	Tcl_DbNewBignumObj(mp_int *value, const char *file,
				int line);
extern void		Tcl_SetBignumObj(Tcl_Obj *obj, mp_int *value);
extern int		Tcl_GetBignumFromObj(Tcl_Interp *interp,
				Tcl_Obj *obj, mp_int *value);
extern int		Tcl_TakeBignumFromObj(Tcl_Interp *interp,
				Tcl_Obj *obj, mp_int *value);
extern int		Tcl_TruncateChannel(Tcl_Channel chan,
				Tcl_WideInt length);
extern Tcl_DriverTruncateProc * Tcl_ChannelTruncateProc(
				const Tcl_ChannelType *chanTypePtr);
extern void		Tcl_SetChannelErrorInterp(Tcl_Interp *interp,
				Tcl_Obj *msg);
extern void		Tcl_GetChannelErrorInterp(Tcl_Interp *interp,
				Tcl_Obj **msg);
extern void		Tcl_SetChannelError(Tcl_Channel chan, Tcl_Obj *msg);
extern void		Tcl_GetChannelError(Tcl_Channel chan, Tcl_Obj **msg);
extern int		Tcl_InitBignumFromDouble(Tcl_Interp *interp,
				double initval, mp_int *toInit);
extern Tcl_Obj *	Tcl_GetNamespaceUnknownHandler(Tcl_Interp *interp,
				Tcl_Namespace *nsPtr);
extern int		Tcl_SetNamespaceUnknownHandler(Tcl_Interp *interp,
				Tcl_Namespace *nsPtr, Tcl_Obj *handlerPtr);
extern int		Tcl_GetEncodingFromObj(Tcl_Interp *interp,
				Tcl_Obj *objPtr, Tcl_Encoding *encodingPtr);
extern Tcl_Obj *	Tcl_GetEncodingSearchPath(void);
extern int		Tcl_SetEncodingSearchPath(Tcl_Obj *searchPath);
extern const char *	Tcl_GetEncodingNameFromEnvironment(
				Tcl_DString *bufPtr);
extern int		Tcl_PkgRequireProc(Tcl_Interp *interp,
				const char *name, int objc,
				Tcl_Obj *const objv[], void *clientDataPtr);
extern void		Tcl_AppendObjToErrorInfo(Tcl_Interp *interp,
				Tcl_Obj *objPtr);
extern void		Tcl_AppendLimitedToObj(Tcl_Obj *objPtr,
				const char *bytes, int length, int limit,
				const char *ellipsis);
extern Tcl_Obj *	Tcl_Format(Tcl_Interp *interp, const char *format,
				int objc, Tcl_Obj *const objv[]);
extern int		Tcl_AppendFormatToObj(Tcl_Interp *interp,
				Tcl_Obj *objPtr, const char *format,
				int objc, Tcl_Obj *const objv[]);
extern Tcl_Obj *	Tcl_ObjPrintf(const char *format, ...) ;
extern void		Tcl_AppendPrintfToObj(Tcl_Obj *objPtr,
				const char *format, ...) ;
extern int		Tcl_CancelEval(Tcl_Interp *interp,
				Tcl_Obj *resultObjPtr, ClientData clientData,
				int flags);
extern int		Tcl_Canceled(Tcl_Interp *interp, int flags);
extern int		Tcl_CreatePipe(Tcl_Interp *interp,
				Tcl_Channel *rchan, Tcl_Channel *wchan,
				int flags);
extern Tcl_Command	Tcl_NRCreateCommand(Tcl_Interp *interp,
				const char *cmdName, Tcl_ObjCmdProc *proc,
				Tcl_ObjCmdProc *nreProc,
				ClientData clientData,
				Tcl_CmdDeleteProc *deleteProc);
extern int		Tcl_NREvalObj(Tcl_Interp *interp, Tcl_Obj *objPtr,
				int flags);
extern int		Tcl_NREvalObjv(Tcl_Interp *interp, int objc,
				Tcl_Obj *const objv[], int flags);
extern int		Tcl_NRCmdSwap(Tcl_Interp *interp, Tcl_Command cmd,
				int objc, Tcl_Obj *const objv[], int flags);
extern void		Tcl_NRAddCallback(Tcl_Interp *interp,
				Tcl_NRPostProc *postProcPtr,
				ClientData data0, ClientData data1,
				ClientData data2, ClientData data3);
extern int		Tcl_NRCallObjProc(Tcl_Interp *interp,
				Tcl_ObjCmdProc *objProc,
				ClientData clientData, int objc,
				Tcl_Obj *const objv[]);
extern unsigned		Tcl_GetFSDeviceFromStat(const Tcl_StatBuf *statPtr);
extern unsigned		Tcl_GetFSInodeFromStat(const Tcl_StatBuf *statPtr);
extern unsigned		Tcl_GetModeFromStat(const Tcl_StatBuf *statPtr);
extern int		Tcl_GetLinkCountFromStat(const Tcl_StatBuf *statPtr);
extern int		Tcl_GetUserIdFromStat(const Tcl_StatBuf *statPtr);
extern int		Tcl_GetGroupIdFromStat(const Tcl_StatBuf *statPtr);
extern int		Tcl_GetDeviceTypeFromStat(const Tcl_StatBuf *statPtr);
extern Tcl_WideInt	Tcl_GetAccessTimeFromStat(const Tcl_StatBuf *statPtr);
extern Tcl_WideInt	Tcl_GetModificationTimeFromStat(
				const Tcl_StatBuf *statPtr);
extern Tcl_WideInt	Tcl_GetChangeTimeFromStat(const Tcl_StatBuf *statPtr);
extern Tcl_WideUInt	Tcl_GetSizeFromStat(const Tcl_StatBuf *statPtr);
extern Tcl_WideUInt	Tcl_GetBlocksFromStat(const Tcl_StatBuf *statPtr);
extern unsigned		Tcl_GetBlockSizeFromStat(const Tcl_StatBuf *statPtr);
extern int		Tcl_SetEnsembleParameterList(Tcl_Interp *interp,
				Tcl_Command token, Tcl_Obj *paramList);
extern int		Tcl_GetEnsembleParameterList(Tcl_Interp *interp,
				Tcl_Command token, Tcl_Obj **paramListPtr);
extern int		Tcl_ParseArgsObjv(Tcl_Interp *interp,
				const Tcl_ArgvInfo *argTable, int *objcPtr,
				Tcl_Obj *const *objv, Tcl_Obj ***remObjv);
extern int		Tcl_GetErrorLine(Tcl_Interp *interp);
extern void		Tcl_SetErrorLine(Tcl_Interp *interp, int lineNum);
extern void		Tcl_TransferResult(Tcl_Interp *sourceInterp,
				int code, Tcl_Interp *targetInterp);
extern int		Tcl_InterpActive(Tcl_Interp *interp);
extern void		Tcl_BackgroundException(Tcl_Interp *interp, int code);
extern int		Tcl_ZlibDeflate(Tcl_Interp *interp, int format,
				Tcl_Obj *data, int level,
				Tcl_Obj *gzipHeaderDictObj);
extern int		Tcl_ZlibInflate(Tcl_Interp *interp, int format,
				Tcl_Obj *data, int buffersize,
				Tcl_Obj *gzipHeaderDictObj);
extern unsigned int	Tcl_ZlibCRC32(unsigned int crc,
				const unsigned char *buf, int len);
extern unsigned int	Tcl_ZlibAdler32(unsigned int adler,
				const unsigned char *buf, int len);
extern int		Tcl_ZlibStreamInit(Tcl_Interp *interp, int mode,
				int format, int level, Tcl_Obj *dictObj,
				Tcl_ZlibStream *zshandle);
extern Tcl_Obj *	Tcl_ZlibStreamGetCommandName(Tcl_ZlibStream zshandle);
extern int		Tcl_ZlibStreamEof(Tcl_ZlibStream zshandle);
extern int		Tcl_ZlibStreamChecksum(Tcl_ZlibStream zshandle);
extern int		Tcl_ZlibStreamPut(Tcl_ZlibStream zshandle,
				Tcl_Obj *data, int flush);
extern int		Tcl_ZlibStreamGet(Tcl_ZlibStream zshandle,
				Tcl_Obj *data, int count);
extern int		Tcl_ZlibStreamClose(Tcl_ZlibStream zshandle);
extern int		Tcl_ZlibStreamReset(Tcl_ZlibStream zshandle);
extern void		Tcl_SetStartupScript(Tcl_Obj *path,
				const char *encoding);
extern Tcl_Obj *	Tcl_GetStartupScript(const char **encodingPtr);
extern int		Tcl_CloseEx(Tcl_Interp *interp, Tcl_Channel chan,
				int flags);
extern int		Tcl_NRExprObj(Tcl_Interp *interp, Tcl_Obj *objPtr,
				Tcl_Obj *resultPtr);
extern int		Tcl_NRSubstObj(Tcl_Interp *interp, Tcl_Obj *objPtr,
				int flags);
extern int		Tcl_LoadFile(Tcl_Interp *interp, Tcl_Obj *pathPtr,
				const char *const symv[], int flags,
				void *procPtrs, Tcl_LoadHandle *handlePtr);
extern void *		Tcl_FindSymbol(Tcl_Interp *interp,
				Tcl_LoadHandle handle, const char *symbol);
extern int		Tcl_FSUnloadFile(Tcl_Interp *interp,
				Tcl_LoadHandle handlePtr);
extern void		Tcl_ZlibStreamSetCompressionDictionary(
				Tcl_ZlibStream zhandle,
				Tcl_Obj *compressionDictionaryObj);
extern void		TclUnusedStubEntry(void);
#define Tcl_QueryTimeProc \
	(tclStubsPtr->tcl_QueryTimeProc) 
#define Tcl_ChannelThreadActionProc \
	(tclStubsPtr->tcl_ChannelThreadActionProc) 
#define Tcl_NewBignumObj \
	(tclStubsPtr->tcl_NewBignumObj) 
#define Tcl_DbNewBignumObj \
	(tclStubsPtr->tcl_DbNewBignumObj) 
#define Tcl_SetBignumObj \
	(tclStubsPtr->tcl_SetBignumObj) 
#define Tcl_GetBignumFromObj \
	(tclStubsPtr->tcl_GetBignumFromObj) 
#define Tcl_TakeBignumFromObj \
	(tclStubsPtr->tcl_TakeBignumFromObj) 
#define Tcl_TruncateChannel \
	(tclStubsPtr->tcl_TruncateChannel) 
#define Tcl_ChannelTruncateProc \
	(tclStubsPtr->tcl_ChannelTruncateProc) 
#define Tcl_SetChannelErrorInterp \
	(tclStubsPtr->tcl_SetChannelErrorInterp) 
#define Tcl_GetChannelErrorInterp \
	(tclStubsPtr->tcl_GetChannelErrorInterp) 
#define Tcl_SetChannelError \
	(tclStubsPtr->tcl_SetChannelError) 
#define Tcl_GetChannelError \
	(tclStubsPtr->tcl_GetChannelError) 
#define Tcl_InitBignumFromDouble \
	(tclStubsPtr->tcl_InitBignumFromDouble) 
#define Tcl_GetNamespaceUnknownHandler \
	(tclStubsPtr->tcl_GetNamespaceUnknownHandler) 
#define Tcl_SetNamespaceUnknownHandler \
	(tclStubsPtr->tcl_SetNamespaceUnknownHandler) 
#define Tcl_GetEncodingFromObj \
	(tclStubsPtr->tcl_GetEncodingFromObj) 
#define Tcl_GetEncodingSearchPath \
	(tclStubsPtr->tcl_GetEncodingSearchPath) 
#define Tcl_SetEncodingSearchPath \
	(tclStubsPtr->tcl_SetEncodingSearchPath) 
#define Tcl_GetEncodingNameFromEnvironment \
	(tclStubsPtr->tcl_GetEncodingNameFromEnvironment) 
#define Tcl_PkgRequireProc \
	(tclStubsPtr->tcl_PkgRequireProc) 
#define Tcl_AppendObjToErrorInfo \
	(tclStubsPtr->tcl_AppendObjToErrorInfo) 
#define Tcl_AppendLimitedToObj \
	(tclStubsPtr->tcl_AppendLimitedToObj) 
#define Tcl_Format \
	(tclStubsPtr->tcl_Format) 
#define Tcl_AppendFormatToObj \
	(tclStubsPtr->tcl_AppendFormatToObj) 
#define Tcl_ObjPrintf \
	(tclStubsPtr->tcl_ObjPrintf) 
#define Tcl_AppendPrintfToObj \
	(tclStubsPtr->tcl_AppendPrintfToObj) 
#define Tcl_CancelEval \
	(tclStubsPtr->tcl_CancelEval) 
#define Tcl_Canceled \
	(tclStubsPtr->tcl_Canceled) 
#define Tcl_CreatePipe \
	(tclStubsPtr->tcl_CreatePipe) 
#define Tcl_NRCreateCommand \
	(tclStubsPtr->tcl_NRCreateCommand) 
#define Tcl_NREvalObj \
	(tclStubsPtr->tcl_NREvalObj) 
#define Tcl_NREvalObjv \
	(tclStubsPtr->tcl_NREvalObjv) 
#define Tcl_NRCmdSwap \
	(tclStubsPtr->tcl_NRCmdSwap) 
#define Tcl_NRAddCallback \
	(tclStubsPtr->tcl_NRAddCallback) 
#define Tcl_NRCallObjProc \
	(tclStubsPtr->tcl_NRCallObjProc) 
#define Tcl_GetFSDeviceFromStat \
	(tclStubsPtr->tcl_GetFSDeviceFromStat) 
#define Tcl_GetFSInodeFromStat \
	(tclStubsPtr->tcl_GetFSInodeFromStat) 
#define Tcl_GetModeFromStat \
	(tclStubsPtr->tcl_GetModeFromStat) 
#define Tcl_GetLinkCountFromStat \
	(tclStubsPtr->tcl_GetLinkCountFromStat) 
#define Tcl_GetUserIdFromStat \
	(tclStubsPtr->tcl_GetUserIdFromStat) 
#define Tcl_GetGroupIdFromStat \
	(tclStubsPtr->tcl_GetGroupIdFromStat) 
#define Tcl_GetDeviceTypeFromStat \
	(tclStubsPtr->tcl_GetDeviceTypeFromStat) 
#define Tcl_GetAccessTimeFromStat \
	(tclStubsPtr->tcl_GetAccessTimeFromStat) 
#define Tcl_GetModificationTimeFromStat \
	(tclStubsPtr->tcl_GetModificationTimeFromStat) 
#define Tcl_GetChangeTimeFromStat \
	(tclStubsPtr->tcl_GetChangeTimeFromStat) 
#define Tcl_GetSizeFromStat \
	(tclStubsPtr->tcl_GetSizeFromStat) 
#define Tcl_GetBlocksFromStat \
	(tclStubsPtr->tcl_GetBlocksFromStat) 
#define Tcl_GetBlockSizeFromStat \
	(tclStubsPtr->tcl_GetBlockSizeFromStat) 
#define Tcl_SetEnsembleParameterList \
	(tclStubsPtr->tcl_SetEnsembleParameterList) 
#define Tcl_GetEnsembleParameterList \
	(tclStubsPtr->tcl_GetEnsembleParameterList) 
#define Tcl_ParseArgsObjv \
	(tclStubsPtr->tcl_ParseArgsObjv) 
#define Tcl_GetErrorLine \
	(tclStubsPtr->tcl_GetErrorLine) 
#define Tcl_SetErrorLine \
	(tclStubsPtr->tcl_SetErrorLine) 
#define Tcl_TransferResult \
	(tclStubsPtr->tcl_TransferResult) 
#define Tcl_InterpActive \
	(tclStubsPtr->tcl_InterpActive) 
#define Tcl_BackgroundException \
	(tclStubsPtr->tcl_BackgroundException) 
#define Tcl_ZlibDeflate \
	(tclStubsPtr->tcl_ZlibDeflate) 
#define Tcl_ZlibInflate \
	(tclStubsPtr->tcl_ZlibInflate) 
#define Tcl_ZlibCRC32 \
	(tclStubsPtr->tcl_ZlibCRC32) 
#define Tcl_ZlibAdler32 \
	(tclStubsPtr->tcl_ZlibAdler32) 
#define Tcl_ZlibStreamInit \
	(tclStubsPtr->tcl_ZlibStreamInit) 
#define Tcl_ZlibStreamGetCommandName \
	(tclStubsPtr->tcl_ZlibStreamGetCommandName) 
#define Tcl_ZlibStreamEof \
	(tclStubsPtr->tcl_ZlibStreamEof) 
#define Tcl_ZlibStreamChecksum \
	(tclStubsPtr->tcl_ZlibStreamChecksum) 
#define Tcl_ZlibStreamPut \
	(tclStubsPtr->tcl_ZlibStreamPut) 
#define Tcl_ZlibStreamGet \
	(tclStubsPtr->tcl_ZlibStreamGet) 
#define Tcl_ZlibStreamClose \
	(tclStubsPtr->tcl_ZlibStreamClose) 
#define Tcl_ZlibStreamReset \
	(tclStubsPtr->tcl_ZlibStreamReset) 
#define Tcl_SetStartupScript \
	(tclStubsPtr->tcl_SetStartupScript) 
#define Tcl_GetStartupScript \
	(tclStubsPtr->tcl_GetStartupScript) 
#define Tcl_CloseEx \
	(tclStubsPtr->tcl_CloseEx) 
#define Tcl_NRExprObj \
	(tclStubsPtr->tcl_NRExprObj) 
#define Tcl_NRSubstObj \
	(tclStubsPtr->tcl_NRSubstObj) 
#define Tcl_LoadFile \
	(tclStubsPtr->tcl_LoadFile) 
#define Tcl_FindSymbol \
	(tclStubsPtr->tcl_FindSymbol) 
#define Tcl_FSUnloadFile \
	(tclStubsPtr->tcl_FSUnloadFile) 
#define Tcl_ZlibStreamSetCompressionDictionary \
	(tclStubsPtr->tcl_ZlibStreamSetCompressionDictionary) 
#define TclUnusedStubEntry \
	(tclStubsPtr->tclUnusedStubEntry) 