Package_Tools/pas_units/tcl8.6/tclDecls.pas

procedure Tcl_QueryTimeProc(getProc:PPTcl_GetTimeProc; scaleProc:PPTcl_ScaleTimeProc; clientData:PClientData);cdecl;external libtclstub8_6;
function Tcl_ChannelThreadActionProc(chanTypePtr:PTcl_ChannelType):PTcl_DriverThreadActionProc;cdecl;external libtclstub8_6;
function Tcl_NewBignumObj(value:Pmp_int):PTcl_Obj;cdecl;external libtclstub8_6;
function Tcl_DbNewBignumObj(value:Pmp_int; file_:Pchar; line:longint):PTcl_Obj;cdecl;external libtclstub8_6;
procedure Tcl_SetBignumObj(obj:PTcl_Obj; value:Pmp_int);cdecl;external libtclstub8_6;
function Tcl_GetBignumFromObj(interp:PTcl_Interp; obj:PTcl_Obj; value:Pmp_int):longint;cdecl;external libtclstub8_6;
function Tcl_TakeBignumFromObj(interp:PTcl_Interp; obj:PTcl_Obj; value:Pmp_int):longint;cdecl;external libtclstub8_6;
function Tcl_TruncateChannel(chan:TTcl_Channel; length:TTcl_WideInt):longint;cdecl;external libtclstub8_6;
function Tcl_ChannelTruncateProc(chanTypePtr:PTcl_ChannelType):PTcl_DriverTruncateProc;cdecl;external libtclstub8_6;
procedure Tcl_SetChannelErrorInterp(interp:PTcl_Interp; msg:PTcl_Obj);cdecl;external libtclstub8_6;
procedure Tcl_GetChannelErrorInterp(interp:PTcl_Interp; msg:PPTcl_Obj);cdecl;external libtclstub8_6;
procedure Tcl_SetChannelError(chan:TTcl_Channel; msg:PTcl_Obj);cdecl;external libtclstub8_6;
procedure Tcl_GetChannelError(chan:TTcl_Channel; msg:PPTcl_Obj);cdecl;external libtclstub8_6;
function Tcl_InitBignumFromDouble(interp:PTcl_Interp; initval:double; toInit:Pmp_int):longint;cdecl;external libtclstub8_6;
function Tcl_GetNamespaceUnknownHandler(interp:PTcl_Interp; nsPtr:PTcl_Namespace):PTcl_Obj;cdecl;external libtclstub8_6;
function Tcl_SetNamespaceUnknownHandler(interp:PTcl_Interp; nsPtr:PTcl_Namespace; handlerPtr:PTcl_Obj):longint;cdecl;external libtclstub8_6;
function Tcl_GetEncodingFromObj(interp:PTcl_Interp; objPtr:PTcl_Obj; encodingPtr:PTcl_Encoding):longint;cdecl;external libtclstub8_6;
function Tcl_GetEncodingSearchPath:PTcl_Obj;cdecl;external libtclstub8_6;
function Tcl_SetEncodingSearchPath(searchPath:PTcl_Obj):longint;cdecl;external libtclstub8_6;
function Tcl_GetEncodingNameFromEnvironment(bufPtr:PTcl_DString):Pchar;cdecl;external libtclstub8_6;
function Tcl_PkgRequireProc(interp:PTcl_Interp; name:Pchar; objc:longint; objv:PPTcl_Obj; clientDataPtr:pointer):longint;cdecl;external libtclstub8_6;
procedure Tcl_AppendObjToErrorInfo(interp:PTcl_Interp; objPtr:PTcl_Obj);cdecl;external libtclstub8_6;
procedure Tcl_AppendLimitedToObj(objPtr:PTcl_Obj; bytes:Pchar; length:longint; limit:longint; ellipsis:Pchar);cdecl;external libtclstub8_6;
function Tcl_Format(interp:PTcl_Interp; format:Pchar; objc:longint; objv:PPTcl_Obj):PTcl_Obj;cdecl;external libtclstub8_6;
function Tcl_AppendFormatToObj(interp:PTcl_Interp; objPtr:PTcl_Obj; format:Pchar; objc:longint; objv:PPTcl_Obj):longint;cdecl;external libtclstub8_6;
function Tcl_ObjPrintf(format:Pchar; args:array of const):PTcl_Obj;cdecl;external libtclstub8_6;
function Tcl_ObjPrintf(format:Pchar):PTcl_Obj;cdecl;external libtclstub8_6;
procedure Tcl_AppendPrintfToObj(objPtr:PTcl_Obj; format:Pchar; args:array of const);cdecl;external libtclstub8_6;
procedure Tcl_AppendPrintfToObj(objPtr:PTcl_Obj; format:Pchar);cdecl;external libtclstub8_6;
function Tcl_CancelEval(interp:PTcl_Interp; resultObjPtr:PTcl_Obj; clientData:TClientData; flags:longint):longint;cdecl;external libtclstub8_6;
function Tcl_Canceled(interp:PTcl_Interp; flags:longint):longint;cdecl;external libtclstub8_6;
function Tcl_CreatePipe(interp:PTcl_Interp; rchan:PTcl_Channel; wchan:PTcl_Channel; flags:longint):longint;cdecl;external libtclstub8_6;
function Tcl_NRCreateCommand(interp:PTcl_Interp; cmdName:Pchar; proc:PTcl_ObjCmdProc; nreProc:PTcl_ObjCmdProc; clientData:TClientData;
           deleteProc:PTcl_CmdDeleteProc):TTcl_Command;cdecl;external libtclstub8_6;
function Tcl_NREvalObj(interp:PTcl_Interp; objPtr:PTcl_Obj; flags:longint):longint;cdecl;external libtclstub8_6;
function Tcl_NREvalObjv(interp:PTcl_Interp; objc:longint; objv:PPTcl_Obj; flags:longint):longint;cdecl;external libtclstub8_6;
function Tcl_NRCmdSwap(interp:PTcl_Interp; cmd:TTcl_Command; objc:longint; objv:PPTcl_Obj; flags:longint):longint;cdecl;external libtclstub8_6;
procedure Tcl_NRAddCallback(interp:PTcl_Interp; postProcPtr:PTcl_NRPostProc; data0:TClientData; data1:TClientData; data2:TClientData;
            data3:TClientData);cdecl;external libtclstub8_6;
function Tcl_NRCallObjProc(interp:PTcl_Interp; objProc:PTcl_ObjCmdProc; clientData:TClientData; objc:longint; objv:PPTcl_Obj):longint;cdecl;external libtclstub8_6;
function Tcl_GetFSDeviceFromStat(statPtr:PTcl_StatBuf):dword;cdecl;external libtclstub8_6;
function Tcl_GetFSInodeFromStat(statPtr:PTcl_StatBuf):dword;cdecl;external libtclstub8_6;
function Tcl_GetModeFromStat(statPtr:PTcl_StatBuf):dword;cdecl;external libtclstub8_6;
function Tcl_GetLinkCountFromStat(statPtr:PTcl_StatBuf):longint;cdecl;external libtclstub8_6;
function Tcl_GetUserIdFromStat(statPtr:PTcl_StatBuf):longint;cdecl;external libtclstub8_6;
function Tcl_GetGroupIdFromStat(statPtr:PTcl_StatBuf):longint;cdecl;external libtclstub8_6;
function Tcl_GetDeviceTypeFromStat(statPtr:PTcl_StatBuf):longint;cdecl;external libtclstub8_6;
function Tcl_GetAccessTimeFromStat(statPtr:PTcl_StatBuf):TTcl_WideInt;cdecl;external libtclstub8_6;
function Tcl_GetModificationTimeFromStat(statPtr:PTcl_StatBuf):TTcl_WideInt;cdecl;external libtclstub8_6;
function Tcl_GetChangeTimeFromStat(statPtr:PTcl_StatBuf):TTcl_WideInt;cdecl;external libtclstub8_6;
function Tcl_GetSizeFromStat(statPtr:PTcl_StatBuf):TTcl_WideUInt;cdecl;external libtclstub8_6;
function Tcl_GetBlocksFromStat(statPtr:PTcl_StatBuf):TTcl_WideUInt;cdecl;external libtclstub8_6;
function Tcl_GetBlockSizeFromStat(statPtr:PTcl_StatBuf):dword;cdecl;external libtclstub8_6;
function Tcl_SetEnsembleParameterList(interp:PTcl_Interp; token:TTcl_Command; paramList:PTcl_Obj):longint;cdecl;external libtclstub8_6;
function Tcl_GetEnsembleParameterList(interp:PTcl_Interp; token:TTcl_Command; paramListPtr:PPTcl_Obj):longint;cdecl;external libtclstub8_6;
function Tcl_ParseArgsObjv(interp:PTcl_Interp; argTable:PTcl_ArgvInfo; objcPtr:Plongint; objv:PPTcl_Obj; remObjv:PPPTcl_Obj):longint;cdecl;external libtclstub8_6;
function Tcl_GetErrorLine(interp:PTcl_Interp):longint;cdecl;external libtclstub8_6;
procedure Tcl_SetErrorLine(interp:PTcl_Interp; lineNum:longint);cdecl;external libtclstub8_6;
procedure Tcl_TransferResult(sourceInterp:PTcl_Interp; code:longint; targetInterp:PTcl_Interp);cdecl;external libtclstub8_6;
function Tcl_InterpActive(interp:PTcl_Interp):longint;cdecl;external libtclstub8_6;
procedure Tcl_BackgroundException(interp:PTcl_Interp; code:longint);cdecl;external libtclstub8_6;
function Tcl_ZlibDeflate(interp:PTcl_Interp; format:longint; data:PTcl_Obj; level:longint; gzipHeaderDictObj:PTcl_Obj):longint;cdecl;external libtclstub8_6;
function Tcl_ZlibInflate(interp:PTcl_Interp; format:longint; data:PTcl_Obj; buffersize:longint; gzipHeaderDictObj:PTcl_Obj):longint;cdecl;external libtclstub8_6;
function Tcl_ZlibCRC32(crc:dword; buf:Pbyte; len:longint):dword;cdecl;external libtclstub8_6;
function Tcl_ZlibAdler32(adler:dword; buf:Pbyte; len:longint):dword;cdecl;external libtclstub8_6;
function Tcl_ZlibStreamInit(interp:PTcl_Interp; mode:longint; format:longint; level:longint; dictObj:PTcl_Obj;
           zshandle:PTcl_ZlibStream):longint;cdecl;external libtclstub8_6;
function Tcl_ZlibStreamGetCommandName(zshandle:TTcl_ZlibStream):PTcl_Obj;cdecl;external libtclstub8_6;
function Tcl_ZlibStreamEof(zshandle:TTcl_ZlibStream):longint;cdecl;external libtclstub8_6;
function Tcl_ZlibStreamChecksum(zshandle:TTcl_ZlibStream):longint;cdecl;external libtclstub8_6;
function Tcl_ZlibStreamPut(zshandle:TTcl_ZlibStream; data:PTcl_Obj; flush:longint):longint;cdecl;external libtclstub8_6;
function Tcl_ZlibStreamGet(zshandle:TTcl_ZlibStream; data:PTcl_Obj; count:longint):longint;cdecl;external libtclstub8_6;
function Tcl_ZlibStreamClose(zshandle:TTcl_ZlibStream):longint;cdecl;external libtclstub8_6;
function Tcl_ZlibStreamReset(zshandle:TTcl_ZlibStream):longint;cdecl;external libtclstub8_6;
procedure Tcl_SetStartupScript(path:PTcl_Obj; encoding:Pchar);cdecl;external libtclstub8_6;
function Tcl_GetStartupScript(encodingPtr:PPchar):PTcl_Obj;cdecl;external libtclstub8_6;
function Tcl_CloseEx(interp:PTcl_Interp; chan:TTcl_Channel; flags:longint):longint;cdecl;external libtclstub8_6;
function Tcl_NRExprObj(interp:PTcl_Interp; objPtr:PTcl_Obj; resultPtr:PTcl_Obj):longint;cdecl;external libtclstub8_6;
function Tcl_NRSubstObj(interp:PTcl_Interp; objPtr:PTcl_Obj; flags:longint):longint;cdecl;external libtclstub8_6;
function Tcl_LoadFile(interp:PTcl_Interp; pathPtr:PTcl_Obj; symv:PPchar; flags:longint; procPtrs:pointer;
           handlePtr:PTcl_LoadHandle):longint;cdecl;external libtclstub8_6;
function Tcl_FindSymbol(interp:PTcl_Interp; handle:TTcl_LoadHandle; symbol:Pchar):pointer;cdecl;external libtclstub8_6;
function Tcl_FSUnloadFile(interp:PTcl_Interp; handlePtr:TTcl_LoadHandle):longint;cdecl;external libtclstub8_6;
procedure Tcl_ZlibStreamSetCompressionDictionary(zhandle:TTcl_ZlibStream; compressionDictionaryObj:PTcl_Obj);cdecl;external libtclstub8_6;
procedure TclUnusedStubEntry;cdecl;external libtclstub8_6;
